added the rest of the article and the expand comment button

--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ header figcaption span:last-of-type {
   color: #666666;
 }
 
-.sign-up-button {
+.sign-up-button , .comment-button{
   width: 180px;
   border-radius: 3px;
   font-family: 'Libre Franklin', sans-serif;
@@ -335,8 +335,16 @@ header figcaption span:last-of-type {
   cursor: pointer;
 }
 
+.comment-button {
+    width: 300px;
+  }
+
 .sign-up-button:hover {
   background-color: #326891;
+
+}
+.action{
+
 }
 
 .editors-picks {
@@ -544,6 +552,16 @@ header figcaption span:last-of-type {
   line-height: 17px;
   font-weight: 400;
   color: #888888;
+}
+
+#editin-remarque{
+font-size: small;
+line-height: normal;
+color: rgb(102, 102, 102);
+}
+
+#editin-remarque a{
+   color:rgb(102, 102, 102); 
 }
 
 /* footer */
