--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,13 @@ header h1 {
   text-align: center;
 }
 
+.css-11cwn6f{
+min-width: 600px;
+max-width: 1004px;
+cursor: pointer;
+margin: auto;
+}
+
 header h1 span {
   display: inline-block;
   padding: 0 214px 20px 0;
